# rust-system-prometheus-exporter

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  task.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
debian/: config.toml  postinst  prerm  sysmetrics-rs.service
grafana/: dashboard.json
src/: config.rs  error.rs  main.rs  server.rs
src/collector/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs
tests/: integration_test.rs
tests/fixtures/: proc_stat_128.txt
