[package]
name = "sysmetrics-rs"
version = "0.1.0"
edition = "2021"
description = "A lightweight Linux system metrics Prometheus exporter"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
thiserror = "2"
regex = "1"
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
